--- a/SunPathDiagram/app/build.gradle
+++ b/SunPathDiagram/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "iiitvstudents.com.sunpathdiagram"
         minSdkVersion 15
